yamls/stress/stress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: stress-gateway
  namespace: test-stress
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stress-cpu-vs
  namespace: test-stress
spec:
  gateways:
  - stress-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /stress
    route:
    - destination:
        host: stress-cpu-service
        port:
          number: 9080
---
